; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-footbridge/extr_dc21285-timer.c_ckevt_dc21285_set_next_event.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-footbridge/extr_dc21285-timer.c_ckevt_dc21285_set_next_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@CSR_TIMER1_CLR = common dso_local global i64* null, align 8
@CSR_TIMER1_LOAD = common dso_local global i64* null, align 8
@TIMER_CNTL_ENABLE = common dso_local global i32 0, align 4
@TIMER_CNTL_DIV16 = common dso_local global i32 0, align 4
@CSR_TIMER1_CNTL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @ckevt_dc21285_set_next_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ckevt_dc21285_set_next_event(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %5 = load i64*, i64** @CSR_TIMER1_CLR, align 8
  store i64 0, i64* %5, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64*, i64** @CSR_TIMER1_LOAD, align 8
  store i64 %6, i64* %7, align 8
  %8 = load i32, i32* @TIMER_CNTL_ENABLE, align 4
  %9 = load i32, i32* @TIMER_CNTL_DIV16, align 4
  %10 = or i32 %8, %9
  %11 = load i32*, i32** @CSR_TIMER1_CNTL, align 8
  store i32 %10, i32* %11, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
